#3 - Add some conotent and image to the page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,14 @@
 	<title>James Gutierrez &middot; Web Developer Portfolio</title>
 </head>
 <body>
-	<h1>James Gutierrez &middot; Web Developer Portfolio</h1>
+	<div class="container">
+		<section id="landing">
+		<h1>James Gutierrez</h1>
+		<h2>Full Stack Web Developer</h2>
+		<p>I am a full stack web developer and I love creating things from scratch.</p>
+		<img src="./images/IMG_3630.JPG" alt="My profile image.">
+		</section>
+		<section id="gallery"></section>
+	</div>
 </body>
 </html>
