--- a/index.html
+++ b/index.html
@@ -11,7 +11,24 @@
 		<p>I am a full stack web developer and I love creating things from scratch.</p>
 		<img src="./images/IMG_3630.JPG" alt="My profile image.">
 		</section>
-		<section id="gallery"></section>
+		<section id="gallery">
+		<div class="tools">
+			<h2>Languages I Speak</h2>
+			<ul>
+				<li>HTML</li>
+				<li>CSS</li>
+			</ul>
+		</div>
+		<div class="tools">
+			<h2>Tools I Use</h2>
+			<ul>
+				<li>Git Bash / Terminal</li>
+				<li>Sublime Text / VSCode</li>
+				<li>GitHub / GitHub Pages</li>
+				<li>Google Chrome</li>
+			</ul>
+		</div>
+		</section>
 	</div>
 </body>
 </html>
